fix mod_article spacing

--- a/_cerap.scss
+++ b/_cerap.scss
@@ -11,10 +11,13 @@
 .ft-theme{color: var(--theme);}
 .bg-theme{background: var(--theme); color: color(white);}
 
-
-.mod_article{margin-bottom: $spacing*2; padding: $spacing*2 0;
+.mod_article{padding: $spacing*2 0;
+  // margin-bottom: $spacing*2; 
+  margin-bottom: 0; 
   .mod_article{padding: 0;}
-  @include media-max(xs){margin-bottom: $spacing;padding: $spacing 0;}
+  @include media-max(xs){padding: $spacing 0;
+    // margin-bottom: $spacing;
+  }
   &.section{min-height: 100vh; display: flex; align-items: center; padding: clamp($spacing*2, 15vh, 400px) 0; position: relative; margin-bottom: 0;
     >.inside{flex-basis: 100%;}
   }
